Connecting to Redux

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-navigation": "^1.1.348"
+    "react-native-navigation": "^1.1.348",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
