--- a/ios/petLuvs/Info.plist
+++ b/ios/petLuvs/Info.plist
@@ -66,5 +66,25 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb634004726931460</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>634004726931460</string>
+	<key>FacebookDisplayName</key>
+	<string>petsLuv</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
