--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-facebook-login": "^1.6.0",
+    "react-native-instagram-login": "^1.0.5",
     "react-native-navigation": "^1.1.348",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
