--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
+    "redux-thunk": "^2.2.0",
     "validator": "^9.2.0"
   },
   "devDependencies": {
